--- a/about.html
+++ b/about.html
@@ -9,15 +9,13 @@ title: 关于 / About
     <a href="#" onclick="switchLang('en')">English</a>
   </div>
 
-  <!-- 中文版本 -->
   <div class="about-zh">
-    <!-- 个人信息头部 -->
     <div class="profile-header">
       <div class="profile-photo">
-        <img src="{{ "/assets/images/avatar.jpg" | relative_url }}" alt="曾子涵" onerror="this.src='https://via.placeholder.com/150x150?text=ZH'">
+        <img src="{{ "/assets/images/avatar.jpg" | relative_url }}" alt="Max Zeng" onerror="this.src='https://via.placeholder.com/150x150?text=ZH'">
       </div>
       <div class="profile-info">
-        <h1 class="name">曾子涵</h1>
+        <h1 class="name">Max Zeng</h1>
         <p class="title">AI应用开发工程师 / 软件工程师</p>
         <div class="contact-info">
           <span>📧 zihantsang@hotmail.com</span>
@@ -172,7 +170,7 @@ title: 关于 / About
           <span class="project-date">2024.02 - 2024.08</span>
         </div>
         <div class="project-body">
-          <p class="project-desc">基于Qt开发的数据收集与监控工具，用于RBAC-XC系统的自动化测试</p>
+          <p class="project-desc">针对实验车对传感器数据采集依赖于半自动化脚本及后续包括质量检测、控制管理等流程分散问题，开发了一款支持I/O资源动态调整并集数据监控、数据采集记录、数据回传、数据校验、后台备份的可视化控制工具。</p>
           <ul class="project-achievements">
             <li>开发GUI界面，实现DSU数据录制功能，支持多进程并行处理</li>
             <li>解决数据库性能瓶颈，优化40%，实现100%全流程自动化测试</li>
@@ -191,7 +189,7 @@ title: 关于 / About
         <div class="project-header">
           <div>
             <h3>自动化文档生成系统</h3>
-            <p class="company">南京大学 · 研究项目</p>
+            <p class="company">都柏林圣三一大学 · 研究项目</p>
           </div>
           <span class="project-date">2023.09 - 至今</span>
         </div>
@@ -239,10 +237,10 @@ title: 关于 / About
     <!-- 英文版内容结构相同，文字改为英文 -->
     <div class="profile-header">
       <div class="profile-photo">
-        <img src="{{ "/assets/images/avatar.jpg" | relative_url }}" alt="Zihan Zeng" onerror="this.src='https://via.placeholder.com/150x150?text=ZH'">
+        <img src="{{ "/assets/images/avatar.jpg" | relative_url }}" alt="Max Zeng" onerror="this.src='https://via.placeholder.com/150x150?text=ZH'">
       </div>
       <div class="profile-info">
-        <h1 class="name">Zihan Zeng</h1>
+        <h1 class="name">Max Zeng</h1>
         <p class="title">Full-Stack Developer</p>
         <div class="contact-info">
           <span>📧 zihantsang@hotmail.com</span>
